--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <div class="wrapper">
-      <p>Wikimedia is a global movement whose mission is to bring free educational content to the world.</p>
+      <p><span class="bold">Wikimedia</span> is a global movement whose mission is to bring free educational content to the world.</p>
       <p>Through various projects, chapters, and the support structure of the non-profit Wikimedia Foundation, Wikimedia strives to bring about a world in which every single human being can freely share in the sum of all knowledge.</p>
       <p class="right bold">Welcome to Wikimedia.</p>
       <div class="imgWrap">
