--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <title>HTML / CSS III - Proj</title>
+        <title>HTML / CSS III - Wikimedia</title>
     </head>
     <body>
     <div class="wrapper">
@@ -48,7 +48,7 @@
             <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Wikimedia_Foundation_RGB_logo_with_text.svg/135px-Wikimedia_Foundation_RGB_logo_with_text.svg.png"></a>
 
         </div>
-          <div class="footie">
+          <div class="footer">
             <div>Imagine a world in which every single human being can freely share in the sum of all knowledge.</div>
             <div>That's our commitment</div>
             <p><a href="//wikimediafoundation.org/wiki/Terms_of_Use">Terms of use</a>
